# sensing-py

./: .dockerignore  .gitignore  .gitlab-ci.yml  .ruff.toml  Dockerfile  README.md  config.example.yaml  config.schema  pyproject.toml
.github/workflows/: test.yaml
doc/: architecture.md
kubernetes/: sensing.example.yaml
src/: app.py
src/sensing/: __init__.py  config.schema  spool.py
src/sensing/cli/: app.py  healthz.py
tests/: conftest.py
tests/unit/: test_app.py  test_config.py  test_load.py  test_sensor_pipeline.py  test_spool.py
